fix for side-nav : visibility of choicesMenu in large view and its behavior at 950px

--- a/front/src/app/shop/components/side-nav/side-nav.component.scss
+++ b/front/src/app/shop/components/side-nav/side-nav.component.scss
@@ -46,7 +46,7 @@
     }
 }
 
-@media (max-width: 950px) {
+@media (max-width: 949px) {
     .choicesMenu {
         width: 200px;
         margin-top: -54px;
